--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -15,16 +15,8 @@
 
 }
 
- .newgamebg {
-    background: image_url('newgamescreen.jpeg') no-repeat center center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  height: 700px;
-  box-shadow: 0px 1px 3px #2a2a2a;
+ 
 
-}
 
 .nav-link {
     color: white;
@@ -281,6 +273,13 @@ a.move_to {
   width: 100%;
   height: 100%;
   display: block;
+}
+
+#gameinfo {
+  font-family: Helvetica, Times;
+  font-size: 36px;
+  text-align: center;
+  color: white;
 }
 
 
