--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -5,7 +5,7 @@
 
 <h1 class="text-center">The Pawnshop</h1>
 
-  
+  <div id="gameinfo">
     <div id="currentUser" data-current-user-id=<%= current_user.id %>>
       <p>You are logged in as <%= current_user.name %></p>
     </div>
@@ -15,22 +15,15 @@
     <div id="blackPlayer" data-user-black-id=<%= @game.black_player_id %>>
       <p><%= @game.black_player.name %> is playing as black.</p>
     </div>
-      
-
-
-      
-      
-      
 
     
-  
-
+    
   <div class="col-10 center offset-1">
     <table id="chessboard">
       <tbody>
         <% 8.downto(1).each do |row| %>
           <tr>
-            <% (1..8).each do |col| %>
+            <% 1.upto(8).each do |col| %>
               <td
                 id=<%="#{col}#{row}"%>
               <% if (col + row).odd? %>
@@ -72,16 +65,13 @@
     <% if current_user == @game.white_player || current_user == @game.black_player %>
       <%= link_to "Forfeit Game", forfeit_game_path(@game), :class => "btn btn-danger", :method => :patch,  data: {confirm: "Are you sure? Forfeited games cannot be recovered."} %>
     <% end %> 
+      
+
+
+      
+      
+      
+
     
-        
-    
+  
 
-
- 
-
-    
-     
-
-                  
-
-                      
